Bug 296453 - Dolphin crash
Summary: Dolphin crash
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0
Platform: Fedora RPMs Linux
: NOR crash
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
: 296393 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-03-20 19:18 UTC by bgodusky
Modified: 2012-03-20 21:59 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description bgodusky 2012-03-20 19:18:32 UTC
Application: dolphin (2.0)
KDE Platform Version: 4.8.1 (4.8.1)
Qt Version: 4.8.0
Operating System: Linux 3.3.0-0.rc6.git0.2.fc17.x86_64 x86_64
Distribution (Platform): Fedora RPMs

-- Information about the crash:
- What I was doing when the application crashed:

I was trying to navigate the file system in dolphin after executing it from konsole. At the Konsole prompt logged in as root in the Konsole I typed dolphin. Dolphin opened. I was able to navigate to folder depths in the tree when it crashed.

The crash can be reproduced every time.

-- Backtrace:
Application: Dolphin (dolphin), signal: Segmentation fault
Using host libthread_db library "/lib64/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f9c4ed03880 (LWP 1443))]

Thread 2 (Thread 0x7f9c43cde700 (LWP 1445)):
#0  0x00000032350e85af in poll () from /lib64/libc.so.6
#1  0x0000003234c47af4 in g_main_context_poll (n_fds=1, fds=0x7f9c3c002c00, timeout=-1, context=0x7f9c3c0009a0, priority=<optimized out>) at gmain.c:3412
#2  g_main_context_iterate (context=context@entry=0x7f9c3c0009a0, block=block@entry=1, dispatch=dispatch@entry=1, self=<error reading variable: Unhandled dwarf expression opcode 0xfa>) at gmain.c:3113
#3  0x0000003234c47c14 in g_main_context_iteration (context=0x7f9c3c0009a0, may_block=1) at gmain.c:3179
#4  0x00000036043a2976 in QEventDispatcherGlib::processEvents (this=0x7f9c3c0008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#5  0x000000360437382f in QEventLoop::processEvents (this=this@entry=0x7f9c43cddcf0, flags=...) at kernel/qeventloop.cpp:149
#6  0x0000003604373ab8 in QEventLoop::exec (this=0x7f9c43cddcf0, flags=...) at kernel/qeventloop.cpp:204
#7  0x0000003604278588 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:501
#8  0x000000360435467f in QInotifyFileSystemWatcherEngine::run (this=0xa10960) at io/qfilesystemwatcher_inotify.cpp:248
#9  0x000000360427b4cb in QThreadPrivate::start (arg=0xa10960) at thread/qthread_unix.cpp:298
#10 0x0000003235807d14 in start_thread () from /lib64/libpthread.so.0
#11 0x00000032350f105d in clone () from /lib64/libc.so.6

Thread 1 (Thread 0x7f9c4ed03880 (LWP 1443)):
[KCrash Handler]
#5  parent (this=0x0) at /usr/include/QtCore/qobject.h:273
#6  parentWidget (this=0x0) at /usr/include/QtGui/qwidget.h:1033
#7  PolyesterStyle::drawControl (this=0x8e7700, element=<optimized out>, opt=0x7fff62461d90, p=0x7fff62462fe0, widget=0x0) at /usr/src/debug/polyester-2.0.0/style/drawcontrol.cpp:453
#8  0x00000034d14daecb in QCommonStyle::drawControl (this=0x8e7700, element=<optimized out>, opt=0x7fff62461d90, p=0x7fff62462fe0, widget=0x0) at styles/qcommonstyle.cpp:2054
#9  0x00000034d2052ccb in KStyle::drawControl(QStyle::ControlElement, QStyleOption const*, QPainter*, QWidget const*) const () from /lib64/libkdeui.so.5
#10 0x00007f9c46ed55d7 in PolyesterStyle::drawControl (this=0x8e7700, element=<optimized out>, opt=0x7fff62461d90, p=0x7fff62462fe0, widget=0x0) at /usr/src/debug/polyester-2.0.0/style/drawcontrol.cpp:1836
#11 0x00000034d646b5a6 in KItemListHeader::paintRole (this=this@entry=0xb51870, painter=painter@entry=0x7fff62462fe0, role=..., rect=..., orderIndex=orderIndex@entry=0) at /usr/src/debug/kde-baseapps-4.8.1/dolphin/src/kitemviews/kitemlistheader.cpp:304
#12 0x00000034d646c726 in paint (widget=0xb37930, painter=0x7fff62462fe0, this=<optimized out>, option=<optimized out>) at /usr/src/debug/kde-baseapps-4.8.1/dolphin/src/kitemviews/kitemlistheader.cpp:139
#13 KItemListHeader::paint (this=0xb51870, painter=0x7fff62462fe0, option=<optimized out>, widget=0xb37930) at /usr/src/debug/kde-baseapps-4.8.1/dolphin/src/kitemviews/kitemlistheader.cpp:121
#14 0x00000034d17a8d29 in _q_paintItem (item=item@entry=0xb51880, painter=painter@entry=0x7fff62462fe0, option=option@entry=0xb34d98, widget=widget@entry=0xb37930, useWindowOpacity=useWindowOpacity@entry=true, painterStateProtection=painterStateProtection@entry=true) at graphicsview/qgraphicsscene.cpp:4331
#15 0x00000034d17bb725 in QGraphicsScenePrivate::drawItemHelper (this=this@entry=0xb34b70, item=item@entry=0xb51880, painter=painter@entry=0x7fff62462fe0, option=option@entry=0xb34d98, widget=widget@entry=0xb37930, painterStateProtection=true) at graphicsview/qgraphicsscene.cpp:4427
#16 0x00000034d17be098 in QGraphicsScenePrivate::draw (this=this@entry=0xb34b70, item=item@entry=0xb51880, painter=painter@entry=0x7fff62462fe0, viewTransform=viewTransform@entry=0x0, transformPtr=transformPtr@entry=0xdb4be0, exposedRegion=exposedRegion@entry=0xb35848, widget=0xb37930, opacity=opacity@entry=1, effectTransform=effectTransform@entry=0x0, wasDirtyParentSceneTransform=wasDirtyParentSceneTransform@entry=false, drawItem=true) at graphicsview/qgraphicsscene.cpp:4962
#17 0x00000034d17be755 in QGraphicsScenePrivate::drawSubtreeRecursive (this=0xb34b70, item=0xb51880, painter=0x7fff62462fe0, viewTransform=0x0, exposedRegion=0xb35848, widget=0xb37930, parentOpacity=<optimized out>, effectTransform=0x0) at graphicsview/qgraphicsscene.cpp:4853
#18 0x00000034d17bdc25 in QGraphicsScenePrivate::draw (this=this@entry=0xb34b70, item=item@entry=0xb38ba0, painter=painter@entry=0x7fff62462fe0, viewTransform=viewTransform@entry=0x0, transformPtr=transformPtr@entry=0xb38de0, exposedRegion=exposedRegion@entry=0xb35848, widget=0xb37930, opacity=opacity@entry=1, effectTransform=effectTransform@entry=0x0, wasDirtyParentSceneTransform=wasDirtyParentSceneTransform@entry=false, drawItem=true) at graphicsview/qgraphicsscene.cpp:4992
#19 0x00000034d17be755 in QGraphicsScenePrivate::drawSubtreeRecursive (this=this@entry=0xb34b70, item=0xb38ba0, painter=painter@entry=0x7fff62462fe0, viewTransform=viewTransform@entry=0x0, exposedRegion=exposedRegion@entry=0xb35848, widget=widget@entry=0xb37930, parentOpacity=parentOpacity@entry=1, effectTransform=effectTransform@entry=0x0) at graphicsview/qgraphicsscene.cpp:4853
#20 0x00000034d17bf23e in QGraphicsScenePrivate::drawItems (this=0xb34b70, painter=0x7fff62462fe0, viewTransform=0x0, exposedRegion=0xb35848, widget=0xb37930) at graphicsview/qgraphicsscene.cpp:4735
#21 0x00000034d17db1d9 in QGraphicsView::paintEvent (this=0xb35390, event=<optimized out>) at graphicsview/qgraphicsview.cpp:3471
#22 0x00000034d1219b3a in QWidget::event (this=0xb35390, event=0x7fff62463c30) at kernel/qwidget.cpp:8507
#23 0x00000034d15c3fd6 in QFrame::event (this=0xb35390, e=0x7fff62463c30) at widgets/qframe.cpp:557
#24 0x00000034d17dc34b in QGraphicsView::viewportEvent (this=0xb35390, event=0x7fff62463c30) at graphicsview/qgraphicsview.cpp:2866
#25 0x0000003604374996 in QCoreApplicationPrivate::sendThroughObjectEventFilters (this=<optimized out>, receiver=0xb37930, event=0x7fff62463c30) at kernel/qcoreapplication.cpp:986
#26 0x00000034d11ca2ac in QApplicationPrivate::notify_helper (this=this@entry=0x89d570, receiver=receiver@entry=0xb37930, e=e@entry=0x7fff62463c30) at kernel/qapplication.cpp:4546
#27 0x00000034d11ce85a in QApplication::notify (this=0x7fff62467210, receiver=0xb37930, e=0x7fff62463c30) at kernel/qapplication.cpp:4411
#28 0x00000034d20457b6 in KApplication::notify(QObject*, QEvent*) () from /lib64/libkdeui.so.5
#29 0x000000360437482e in QCoreApplication::notifyInternal (this=0x7fff62467210, receiver=0xb37930, event=0x7fff62463c30) at kernel/qcoreapplication.cpp:876
#30 0x00000034d121582c in sendSpontaneousEvent (event=0x7fff62463c30, receiver=0xb37930) at ../../src/corelib/kernel/qcoreapplication.h:234
#31 QWidgetPrivate::drawWidget (this=this@entry=0xb37960, pdev=pdev@entry=0xc74370, rgn=..., offset=..., flags=flags@entry=4, sharedPainter=sharedPainter@entry=0x0, backingStore=backingStore@entry=0xbbffc0) at kernel/qwidget.cpp:5584
#32 0x00000034d1216316 in QWidgetPrivate::paintSiblingsRecursive (this=0xb353c0, pdev=0xc74370, siblings=..., index=<optimized out>, rgn=..., offset=..., flags=4, sharedPainter=0x0, backingStore=0xbbffc0) at kernel/qwidget.cpp:5793
#33 0x00000034d12153b5 in QWidgetPrivate::drawWidget (this=this@entry=0xb353c0, pdev=pdev@entry=0xc74370, rgn=..., offset=..., flags=flags@entry=4, sharedPainter=sharedPainter@entry=0x0, backingStore=backingStore@entry=0xbbffc0) at kernel/qwidget.cpp:5637
#34 0x00000034d1216316 in QWidgetPrivate::paintSiblingsRecursive (this=this@entry=0xb09580, pdev=pdev@entry=0xc74370, siblings=..., index=<optimized out>, index@entry=7, rgn=..., offset=..., flags=flags@entry=4, sharedPainter=sharedPainter@entry=0x0, backingStore=backingStore@entry=0xbbffc0) at kernel/qwidget.cpp:5793
#35 0x00000034d1216151 in QWidgetPrivate::paintSiblingsRecursive (this=this@entry=0xb09580, pdev=pdev@entry=0xc74370, siblings=..., index=7, index@entry=9, rgn=..., offset=..., flags=flags@entry=4, sharedPainter=sharedPainter@entry=0x0, backingStore=backingStore@entry=0xbbffc0) at kernel/qwidget.cpp:5780
#36 0x00000034d1216151 in QWidgetPrivate::paintSiblingsRecursive (this=0xb09580, pdev=0xc74370, siblings=..., index=9, rgn=..., offset=..., flags=4, sharedPainter=0x0, backingStore=0xbbffc0) at kernel/qwidget.cpp:5780
#37 0x00000034d12153b5 in QWidgetPrivate::drawWidget (this=this@entry=0xb09580, pdev=pdev@entry=0xc74370, rgn=..., offset=..., flags=flags@entry=4, sharedPainter=sharedPainter@entry=0x0, backingStore=backingStore@entry=0xbbffc0) at kernel/qwidget.cpp:5637
#38 0x00000034d1216316 in QWidgetPrivate::paintSiblingsRecursive (this=0xb08b00, pdev=0xc74370, siblings=..., index=<optimized out>, rgn=..., offset=..., flags=4, sharedPainter=0x0, backingStore=0xbbffc0) at kernel/qwidget.cpp:5793
#39 0x00000034d12153b5 in QWidgetPrivate::drawWidget (this=this@entry=0xb08b00, pdev=pdev@entry=0xc74370, rgn=..., offset=..., flags=flags@entry=4, sharedPainter=sharedPainter@entry=0x0, backingStore=backingStore@entry=0xbbffc0) at kernel/qwidget.cpp:5637
#40 0x00000034d1216316 in QWidgetPrivate::paintSiblingsRecursive (this=this@entry=0xad61b0, pdev=pdev@entry=0xc74370, siblings=..., index=<optimized out>, index@entry=3, rgn=..., offset=..., flags=flags@entry=4, sharedPainter=sharedPainter@entry=0x0, backingStore=backingStore@entry=0xbbffc0) at kernel/qwidget.cpp:5793
#41 0x00000034d1216151 in QWidgetPrivate::paintSiblingsRecursive (this=0xad61b0, pdev=0xc74370, siblings=..., index=3, rgn=..., offset=..., flags=4, sharedPainter=0x0, backingStore=0xbbffc0) at kernel/qwidget.cpp:5780
#42 0x00000034d12153b5 in QWidgetPrivate::drawWidget (this=this@entry=0xad61b0, pdev=pdev@entry=0xc74370, rgn=..., offset=..., flags=flags@entry=4, sharedPainter=sharedPainter@entry=0x0, backingStore=backingStore@entry=0xbbffc0) at kernel/qwidget.cpp:5637
#43 0x00000034d1216316 in QWidgetPrivate::paintSiblingsRecursive (this=0xabdcb0, pdev=0xc74370, siblings=..., index=<optimized out>, rgn=..., offset=..., flags=4, sharedPainter=0x0, backingStore=0xbbffc0) at kernel/qwidget.cpp:5793
#44 0x00000034d12153b5 in QWidgetPrivate::drawWidget (this=this@entry=0xabdcb0, pdev=pdev@entry=0xc74370, rgn=..., offset=..., flags=flags@entry=4, sharedPainter=sharedPainter@entry=0x0, backingStore=backingStore@entry=0xbbffc0) at kernel/qwidget.cpp:5637
#45 0x00000034d1216316 in QWidgetPrivate::paintSiblingsRecursive (this=0xb56dd0, pdev=0xc74370, siblings=..., index=<optimized out>, rgn=..., offset=..., flags=4, sharedPainter=0x0, backingStore=0xbbffc0) at kernel/qwidget.cpp:5793
#46 0x00000034d12153b5 in QWidgetPrivate::drawWidget (this=this@entry=0xb56dd0, pdev=pdev@entry=0xc74370, rgn=..., offset=..., flags=flags@entry=4, sharedPainter=sharedPainter@entry=0x0, backingStore=backingStore@entry=0xbbffc0) at kernel/qwidget.cpp:5637
#47 0x00000034d1216316 in QWidgetPrivate::paintSiblingsRecursive (this=this@entry=0x9b1330, pdev=pdev@entry=0xc74370, siblings=..., index=<optimized out>, index@entry=14, rgn=..., offset=..., flags=flags@entry=4, sharedPainter=sharedPainter@entry=0x0, backingStore=backingStore@entry=0xbbffc0) at kernel/qwidget.cpp:5793
#48 0x00000034d1216151 in QWidgetPrivate::paintSiblingsRecursive (this=this@entry=0x9b1330, pdev=pdev@entry=0xc74370, siblings=..., index=14, index@entry=28, rgn=..., offset=..., flags=flags@entry=4, sharedPainter=sharedPainter@entry=0x0, backingStore=backingStore@entry=0xbbffc0) at kernel/qwidget.cpp:5780
#49 0x00000034d1216151 in QWidgetPrivate::paintSiblingsRecursive (this=0x9b1330, pdev=0xc74370, siblings=..., index=28, rgn=..., offset=..., flags=4, sharedPainter=0x0, backingStore=0xbbffc0) at kernel/qwidget.cpp:5780
#50 0x00000034d12153b5 in QWidgetPrivate::drawWidget (this=0x9b1330, pdev=0xc74370, rgn=..., offset=..., flags=<optimized out>, sharedPainter=0x0, backingStore=0xbbffc0) at kernel/qwidget.cpp:5637
#51 0x00000034d13de82c in QWidgetBackingStore::sync (this=0xbbffc0) at painting/qbackingstore.cpp:1373
#52 0x00000034d120add0 in QWidgetPrivate::syncBackingStore (this=this@entry=0x9b1330) at kernel/qwidget.cpp:1890
#53 0x00000034d121a121 in QWidget::event (this=0x9b1120, event=0x9299b0) at kernel/qwidget.cpp:8654
#54 0x00000034d15dd63b in QMainWindow::event (this=0x9b1120, event=0x9299b0) at widgets/qmainwindow.cpp:1478
#55 0x00000034d21368f8 in KXmlGuiWindow::event(QEvent*) () from /lib64/libkdeui.so.5
#56 0x00000034d11ca2dc in QApplicationPrivate::notify_helper (this=this@entry=0x89d570, receiver=receiver@entry=0x9b1120, e=e@entry=0x9299b0) at kernel/qapplication.cpp:4550
#57 0x00000034d11ce85a in QApplication::notify (this=0x7fff62467210, receiver=0x9b1120, e=0x9299b0) at kernel/qapplication.cpp:4411
#58 0x00000034d20457b6 in KApplication::notify(QObject*, QEvent*) () from /lib64/libkdeui.so.5
#59 0x000000360437482e in QCoreApplication::notifyInternal (this=0x7fff62467210, receiver=receiver@entry=0x9b1120, event=event@entry=0x9299b0) at kernel/qcoreapplication.cpp:876
#60 0x0000003604377fb1 in sendEvent (event=0x9299b0, receiver=0x9b1120) at kernel/qcoreapplication.h:231
#61 QCoreApplicationPrivate::sendPostedEvents (receiver=0x9b1120, event_type=77, data=0x8786f0) at kernel/qcoreapplication.cpp:1500
#62 0x00000034d17b7fe2 in dispatchPendingUpdateRequests (this=0xb353c0) at ../../src/gui/graphicsview/qgraphicsview_p.h:200
#63 QGraphicsScenePrivate::_q_processDirtyItems (this=0xb34b70) at graphicsview/qgraphicsscene.cpp:515
#64 0x00000034d17b82d9 in QGraphicsScene::qt_static_metacall (_o=<optimized out>, _c=<optimized out>, _id=<optimized out>, _a=<optimized out>) at .moc/release-shared/moc_qgraphicsscene.cpp:107
#65 0x00000036043890ee in QObject::event (this=0xb34b50, e=<optimized out>) at kernel/qobject.cpp:1195
#66 0x00000034d17c2a84 in QGraphicsScene::event (this=0xb34b50, event=0xdb2e50) at graphicsview/qgraphicsscene.cpp:3561
#67 0x00000034d11ca2dc in QApplicationPrivate::notify_helper (this=this@entry=0x89d570, receiver=receiver@entry=0xb34b50, e=e@entry=0xdb2e50) at kernel/qapplication.cpp:4550
#68 0x00000034d11ce85a in QApplication::notify (this=0x7fff62467210, receiver=0xb34b50, e=0xdb2e50) at kernel/qapplication.cpp:4411
#69 0x00000034d20457b6 in KApplication::notify(QObject*, QEvent*) () from /lib64/libkdeui.so.5
#70 0x000000360437482e in QCoreApplication::notifyInternal (this=0x7fff62467210, receiver=receiver@entry=0xb34b50, event=event@entry=0xdb2e50) at kernel/qcoreapplication.cpp:876
#71 0x0000003604377fb1 in sendEvent (event=0xdb2e50, receiver=0xb34b50) at kernel/qcoreapplication.h:231
#72 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x8786f0) at kernel/qcoreapplication.cpp:1500
#73 0x00000036043a27c3 in sendPostedEvents () at kernel/qcoreapplication.h:236
#74 postEventSourceDispatch (s=s@entry=0x894c00) at kernel/qeventdispatcher_glib.cpp:279
#75 0x0000003234c4773c in g_main_dispatch (context=0x8a1440) at gmain.c:2510
#76 g_main_context_dispatch (context=context@entry=0x8a1440) at gmain.c:3047
#77 0x0000003234c47b58 in g_main_context_iterate (context=context@entry=0x8a1440, block=block@entry=1, dispatch=dispatch@entry=1, self=<error reading variable: Unhandled dwarf expression opcode 0xfa>) at gmain.c:3118
#78 0x0000003234c47c14 in g_main_context_iteration (context=0x8a1440, may_block=1) at gmain.c:3179
#79 0x00000036043a2956 in QEventDispatcherGlib::processEvents (this=0x879fd0, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#80 0x00000034d1269c0e in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=...) at kernel/qguieventdispatcher_glib.cpp:207
#81 0x000000360437382f in QEventLoop::processEvents (this=this@entry=0x7fff624670d0, flags=...) at kernel/qeventloop.cpp:149
#82 0x0000003604373ab8 in QEventLoop::exec (this=0x7fff624670d0, flags=...) at kernel/qeventloop.cpp:204
#83 0x00000036043782fc in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1148
#84 0x00000034d5c46794 in kdemain (argc=1, argv=0x7fff62467348) at /usr/src/debug/kde-baseapps-4.8.1/dolphin/src/main.cpp:91
#85 0x0000003235021735 in __libc_start_main () from /lib64/libc.so.6
#86 0x0000000000400831 in _start ()

Reported using DrKonqi
Comment 1 Peter Penz 2012-03-20 20:09:38 UTC
Git commit 010699e756d0bb6b8659a65e8af8c08d9c424080 by Peter Penz.
Committed on 20/03/2012 at 21:03.
Pushed by ppenz into branch 'KDE/4.8'.

Bypass crash with Polyester-style

The Polyester style crashes when drawing a header where the
parent widget is 0.
FIXED-IN: 4.8.2

M  +4    -3    dolphin/src/kitemviews/kitemlistheader.cpp
M  +5    -1    dolphin/src/kitemviews/kitemlistheader_p.h

http://commits.kde.org/kde-baseapps/010699e756d0bb6b8659a65e8af8c08d9c424080
Comment 2 Peter Penz 2012-03-20 20:10:20 UTC
Git commit ab9f03455608998bb0e5c974e832627f9a35f5b8 by Peter Penz.
Committed on 20/03/2012 at 21:03.
Pushed by ppenz into branch 'master'.

Bypass crash with Polyester-style

The Polyester style crashes when drawing a header where the
parent widget is 0.
FIXED-IN: 4.8.2

M  +4    -3    dolphin/src/kitemviews/kitemlistheader.cpp
M  +5    -1    dolphin/src/kitemviews/kitemlistheader_p.h

http://commits.kde.org/kde-baseapps/ab9f03455608998bb0e5c974e832627f9a35f5b8
Comment 3 Peter Penz 2012-03-20 20:11:29 UTC
Thanks for the report! Switching to another style than Polyester should bypass this issue until KDE applications 4.8.2 get released.
Comment 4 Tommi Tervo 2012-03-20 21:59:32 UTC
*** Bug 296393 has been marked as a duplicate of this bug. ***